unpackaged/main/default/objects/OrderApi__Subscription_Line__c/OrderApi__Subscription_Line__c.object-meta.xml
<CustomObject>
    <description>Subscription Lines allow more than one Item to be assigned to a Subscription.</description>
    <label>Subscription Line</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Subscription Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>