unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/Legacy_Sub_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Sub_Line_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Sub Line ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>