unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Active_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Active_Assignments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** System Calculated ** Number of Active Assignments. Valid and restricted to Items where &quot;Enable Assignments&quot; is checked. Defaults 0 if no Assignments found.</description>
    <inlineHelpText>** System Calculated ** Number of Active Assignments. Valid and restricted to Items where &quot;Enable Assignments&quot; is checked. Defaults 0 if no Assignments found.</inlineHelpText>
    <label>Active Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>