unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Assignments_Available__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignments_Available__c</fullName>
    <description>** System Calculated ** If the Item &quot;Restricts Number of Assignments&quot; then Assignments Allowed - Active Assignments is set. Otherwise the value is null.</description>
    <formula>IF (
OrderApi__Item__r.OrderApi__Enable_Assignments__c &amp;&amp;  OrderApi__Item__r.OrderApi__Restrict_Number_of_Assignments__c , OrderApi__Assignments_Allowed__c - OrderApi__Active_Assignments__c , null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** If the Item &quot;Restricts Number of Assignments&quot; then Assignments Allowed - Active Assignments is set. Otherwise the value is null.</inlineHelpText>
    <label>Assignments Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>