unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Invoice Line record.</description>
    <inlineHelpText>Link to related Invoice Line record.</inlineHelpText>
    <label>Invoice Line</label>
    <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
    <relationshipLabel>Subscription Lines</relationshipLabel>
    <relationshipName>Subscription_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>