unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoiced_Date__c</fullName>
    <description>** System Calculated ** Automatically populated when Invoice generated for related Subscription Line Item.</description>
    <inlineHelpText>** System Calculated ** Automatically populated when Invoice generated for related Subscription Line Item.</inlineHelpText>
    <label>Invoiced Date</label>
    <type>Date</type>
</CustomField>