unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Is_Amendment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related Subscription Line is considered as a &quot;Subscription Amendment&quot;.</description>
    <inlineHelpText>When checked the line will only amendment subscription lines change active subscription.</inlineHelpText>
    <label>Is Amendment</label>
    <type>Checkbox</type>
</CustomField>