unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Is_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** Automatically checked when Invoice generated for related Subscription Line Item.</description>
    <inlineHelpText>** System Calculated ** Automatically checked when Invoice generated for related Subscription Line Item.</inlineHelpText>
    <label>Is Invoiced</label>
    <type>Checkbox</type>
</CustomField>