unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Is_Required_Package_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Required_Package_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the subscription line is linked to a package item where &quot;Is Required&quot; is also checked.</description>
    <inlineHelpText>Checked when the subscription line is linked to a package item where &quot;Is Required&quot; is also checked.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>