unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the related &quot;Subscription&quot; Item.</description>
    <inlineHelpText>** Required ** Link to the related &quot;Subscription&quot; Item.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipName>Subscription_Items</relationshipName>
    <type>Lookup</type>
</CustomField>