unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Price_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the &quot;Price Rule&quot; will no longer drive the &quot;Sale Price&quot; and the system will allow manually entry into the &quot;Sale Price&quot; field.</description>
    <inlineHelpText>When checked the &quot;Price Rule&quot; will no longer drive the &quot;Sale Price&quot; and the system will allow manually entry into the &quot;Sale Price&quot; field.</inlineHelpText>
    <label>Price Override</label>
    <type>Checkbox</type>
</CustomField>