unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Price_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required System Calculated Override ** Link to the Price Rule that sets the &quot;Sale Price&quot; for the Subscription Line - automatically calculated from the linked Item&#39;s &quot;Price Rules&quot; if &quot;Price Override&quot; is unchecked.</description>
    <inlineHelpText>** Conditionally Required System Calculated Override ** Link to the Price Rule that sets the &quot;Sale Price&quot; for the Subscription Line - automatically calculated from the linked Item&#39;s &quot;Price Rules&quot; if &quot;Price Override&quot; is unchecked.</inlineHelpText>
    <label>Price Rule</label>
    <referenceTo>OrderApi__Price_Rule__c</referenceTo>
    <relationshipName>Subscription_Line</relationshipName>
    <type>Lookup</type>
</CustomField>