unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Quantity__c</fullName>
    <description>** Required ** The number of Items for the Subscription Line. Defaults to 1.</description>
    <inlineHelpText>** Required ** The number of Items for the Subscription Line. Defaults to 1.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>