unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sale_Price__c</fullName>
    <description>** System Calculated Required Override ** The price per unit for the Subscription Line &quot;Item&quot;.</description>
    <inlineHelpText>** System Calculated Required Override ** The price per unit for the Subscription Line &quot;Item&quot;.</inlineHelpText>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>