unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Sales Order Line.</description>
    <inlineHelpText>Link to related Sales Order Line</inlineHelpText>
    <label>Sales Order Line</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Subscription Lines</relationshipLabel>
    <relationshipName>Subscription_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>