unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Subscription__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription__c</fullName>
    <description>** Required ** Link to the related Subscription.</description>
    <inlineHelpText>** Required ** Link to the related Subscription.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>OrderApi__Subscription__c</referenceTo>
    <relationshipName>Subscription_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>