unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Subscription_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to parent Subscription Line.</description>
    <inlineHelpText>Link to parent Subscription Line.</inlineHelpText>
    <label>Parent Subscription Line</label>
    <referenceTo>OrderApi__Subscription_Line__c</referenceTo>
    <relationshipLabel>Subscription Lines</relationshipLabel>
    <relationshipName>Subscription_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>