unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the subscription lines to the appropriate term of the Subscription.</description>
    <inlineHelpText>Relates the subscription lines to the appropriate term of the Subscription.</inlineHelpText>
    <label>Term</label>
    <referenceTo>OrderApi__Renewal__c</referenceTo>
    <relationshipLabel>Subscription Lines</relationshipLabel>
    <relationshipName>Subscription_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>