unpackaged/main/default/objects/OrderApi__Subscription_Line__c/fields/OrderApi__Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total__c</fullName>
    <description>** System Calculated Required Override ** Defaults to the &quot;Subtotal&quot;.</description>
    <inlineHelpText>** System Calculated Required Override ** Defaults to the &quot;Subtotal&quot;.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>